# pcd-rs

./: Cargo.toml  README.md  justfile  pyproject.toml
.github/workflows/: copilot-setup-steps.yml
crates/pcl_rustic_core/: Cargo.toml
crates/pcl_rustic_core/src/: compact_point_cloud.rs  lib.rs  point.rs  point_cloud.rs  simple_point_cloud.rs  transform.rs
crates/pcl_rustic_core/tests/: compact_point_cloud.rs
crates/pcl_rustic_downsample/: Cargo.toml
crates/pcl_rustic_downsample/src/: lib.rs
crates/pcl_rustic_io/: Cargo.toml
crates/pcl_rustic_io/src/: lib.rs
crates/pcl_rustic_pybind/: Cargo.toml
crates/pcl_rustic_pybind/src/: lib.rs
python/pcd_rs/: __init__.py
python/pcl_rustic/: __init__.py
src/: lib.rs
