[project]
name = "pcd-rs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "liuzhen19", email = "liuzhen19@xiaomi.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
pcd-rs = "pcd_rs:main"

[tool.maturin]
module-name = "pcd_rs._core" # python module name
python-packages = ["pcd_rs"]
python-source = "python"


[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.rs" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
